<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".WelcomeActivity">

    <!-- Illustration Row -->
    <TextView
        android:id="@+id/app_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingTop="32dp"
        android:text="Zenith-Connect\nDraw Lobby"
        android:textAlignment="center"
        android:textColor="@color/accent_orange"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/illustrationRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/app_Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="371dp"
            android:layout_height="272dp"
            android:layout_marginTop="36dp"
            android:scaleType="centerInside"
            android:src="@drawable/login_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLayout" />
    </LinearLayout>

    <!-- Log In button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="Log In"
        android:textColor="@color/white"
        android:backgroundTint="@color/accent_orange"
        app:layout_constraintTop_toBottomOf="@id/illustrationRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="32dp" />

    <!-- Create Account button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_acct_btn"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="Create Account"
        android:textColor="@color/accent_orange"
        app:strokeColor="@color/accent_orange"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
